$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-12-11 [B] Fixed typo in Polish language file {eenemeenemuu}
2009-12-11 [B] Fixed template error with certain settings for comments and smileys (thread ID 62835) {eenemeenemuu}
2009-12-11 [B] Preserve alpha channel in png thumbnails (thread ID 62286) {eenemeenemuu}
2009-12-11 [M] Updated version count from cpg1.5.2 to cpg1.5.3 to prepare the next release {GauGau}
2009-12-11 [O] Added coppermine globals to custom_include function to allow usage of those variables from within the custom header or footer files {GauGau} {Timo}
2009-12-10 [B] Added support for vertical filmstrip (thread ID 62740) {Timo}
2009-12-07 [C] Added loader.gif to image class (thread ID 62780) {Timo}
2009-12-02 [C] Prev button in filmstrip wrong position in some browsers (thread ID 62710) {Timo}
2009-11-30 [B] Use recursive stripslashes function in Inspekt (thread ID 62532) {eenemeenemuu}
2009-11-30 [B] Fixed navigation section of thumbnails page in eyeball theme (thread ID 62682) {eenemeenemuu}
2009-11-28 [B] Fixed intermediate image display (thread ID 62581) {Nibbler}
2009-11-28 [B] Fixed private album display (thread ID 62659) {Nibbler}
2009-11-27 [O] Removed double entry from debug_output {GauGau}
2009-11-27 [C] Added color attribute to expand/collapse links {GauGau}
2009-11-23 [A] Added plugin hook 'fullsize_html' (thread ID 62592) {eenemeenemuu}
2009-11-20 [B] Fixed linked picture count on album details {eenemeenemuu}
2009-11-20 [C] Fixed filmstrip hopping around if prev/next buttons get hidden (thread ID 62562) {Timo}