@@ -6031,6 +6031,12 @@
     <hash>a173ea2823f14a249a675dd2397fb460</hash>
   </element>
   <element>
+    <fullpath>images/icons/announcement.png</fullpath>
+    <status>mandatory</status>
+    <permission>read</permission>
+    <hash>a173ea2823f14a249a675dd2397fb460</hash>
+  </element>
+  <element>
     <fullpath>images/icons/babelfish.png</fullpath>
     <status>mandatory</status>
     <permission>read</permission>
@@ -10664,6 +10670,12 @@
   </element>
   <element>
     <fullpath>themes/classic/images/icons/alb_mgr.png</fullpath>
+    <status>optional</status>
+    <permission>read</permission>
+    <hash>a173ea2823f14a249a675dd2397fb460</hash>
+  </element>
+  <element>
+    <fullpath>themes/classic/images/icons/announcement.png</fullpath>
     <status>optional</status>
     <permission>read</permission>
     <hash>a173ea2823f14a249a675dd2397fb460</hash>
