@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-12-11 [D] Added announcement icon {GauGau}
 2009-12-11 [B] Fixed typo in Polish language file {eenemeenemuu}
 2009-12-11 [B] Fixed template error with certain settings for comments and smileys (thread ID 62835) {eenemeenemuu}
 2009-12-11 [B] Preserve alpha channel in png thumbnails (thread ID 62286) {eenemeenemuu}
